environment lab4/tf-01/modules/sg/sg.tf

resource "aws_security_group" "SG_2280" {
    name = "SG_2280"
    vpc_id = var.vpcid
    description = "allow SSH and WEB"
    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port   = 8080
        to_port     = 8089
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress{
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
